@@ -5,16 +5,17 @@ import ca.uhn.fhir.context.FhirVersionEnum;
 import ca.uhn.fhir.jpa.api.config.JpaStorageSettings.ClientIdStrategyEnum;
 import ca.uhn.fhir.jpa.model.entity.NormalizedQuantitySearchLevel;
 import ca.uhn.fhir.rest.api.EncodingEnum;
-import com.google.common.collect.ImmutableList;
 import org.hl7.fhir.r4.model.Bundle;
 import org.springframework.boot.context.properties.ConfigurationProperties;
 import org.springframework.boot.context.properties.EnableConfigurationProperties;
 import org.springframework.context.annotation.Configuration;
 
 import java.util.ArrayList;
+import java.util.HashSet;
 import java.util.List;
 import java.util.Map;
 import java.util.Objects;
+import java.util.Set;
 
 @ConfigurationProperties(prefix = "hapi.fhir")
 @Configuration
@@ -33,6 +34,7 @@ public class AppProperties {
   private Boolean allow_multiple_delete = false;
   private Boolean allow_override_default_search_params = true;
   private Boolean auto_create_placeholder_reference_targets = false;
+  private final Set<String> auto_version_reference_at_paths = new HashSet<>();
   private Boolean dao_scheduling_enabled = true;
   private Boolean delete_expunge_enabled = false;
   private Boolean enable_index_missing_fields = false;
@@ -85,7 +87,7 @@ public class AppProperties {
 
   private Integer bundle_batch_pool_size = 20;
   private Integer bundle_batch_pool_max_size = 100;
-  private final List<String> local_base_urls = new ArrayList<>();
+  private final Set<String> local_base_urls = new HashSet<>();
   
   private final List<String> custom_interceptor_classes = new ArrayList<>();
 
@@ -305,6 +307,10 @@ public class AppProperties {
   public void setAuto_create_placeholder_reference_targets(
     Boolean auto_create_placeholder_reference_targets) {
     this.auto_create_placeholder_reference_targets = auto_create_placeholder_reference_targets;
+  }
+
+  public Set<String> getAuto_version_reference_at_paths() {
+    return auto_version_reference_at_paths;
   }
 
   public Integer getDefault_page_size() {
@@ -571,13 +577,13 @@ public class AppProperties {
 		this.bundle_batch_pool_max_size = bundle_batch_pool_max_size;
 	}
 
-	public List<String> getLocal_base_urls() {
+	public Set<String> getLocal_base_urls() {
 		return local_base_urls;
 	}
 
 	public static class Cors {
     private Boolean allow_Credentials = true;
-    private List<String> allowed_origin = ImmutableList.of("*");
+    private List<String> allowed_origin = List.of("*");
 
     public List<String> getAllowed_origin() {
       return allowed_origin;
